Implements new balances api on server
Implements new balances api on server to provide data needed for new
dashboard layout.
