# server/src/main/java/com/github/joern/kalz/doubleentry/controllers/BalancesApiImpl.java
@@ -1,7 +1,9 @@
 package com.github.joern.kalz.doubleentry.controllers;
 
 import com.github.joern.kalz.doubleentry.generated.api.BalancesApi;
-import com.github.joern.kalz.doubleentry.generated.model.ApiGetBalanceResponse;
+import com.github.joern.kalz.doubleentry.generated.model.*;
+import com.github.joern.kalz.doubleentry.services.balances.BalanceDifferences;
+import com.github.joern.kalz.doubleentry.services.balances.Balances;
 import com.github.joern.kalz.doubleentry.services.balances.BalancesService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -10,8 +12,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
+import javax.validation.constraints.Min;
+import javax.validation.constraints.NotNull;
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -22,13 +29,45 @@ public class BalancesApiImpl implements BalancesApi {
     private BalancesService balancesService;
 
     @Override
-    public ResponseEntity<List<ApiGetBalanceResponse>> getBalances(@Valid LocalDate after, @Valid LocalDate before) {
-        List<ApiGetBalanceResponse> balances = balancesService.getBalances(after, before).entrySet().stream()
-                .map(balance -> new ApiGetBalanceResponse()
-                        .accountId(balance.getKey())
-                        .balance(balance.getValue()))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ApiGetAbsoluteBalanceResponse>> getAbsoluteBalances(@NotNull @Valid LocalDate date,
+        @Min(1) @Valid Integer stepMonths, @Min(0) @Valid Integer stepCount) {
 
-        return new ResponseEntity<>(balances, HttpStatus.OK);
+        Integer stepMonthOrNull = Optional.ofNullable(stepMonths).orElse(0);
+        Integer stepCountOrNull = Optional.ofNullable(stepCount).orElse(0);
+        List<Balances> balancesList = balancesService.getBalances(date, stepMonthOrNull, stepCountOrNull);
+        return new ResponseEntity<>(convertToAbsoluteResponse(balancesList), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<ApiGetRelativeBalanceResponse>> getRelativeBalances(@NotNull @Valid LocalDate start,
+        @NotNull @Min(1) @Valid Integer stepMonths, @NotNull @Min(1) @Valid Integer stepCount) {
+
+        List<BalanceDifferences> differences = balancesService.getBalanceDifferences(start, stepMonths, stepCount);
+        return new ResponseEntity<>(convertToRelativeResponse(differences), HttpStatus.OK);
+    }
+
+    private List<ApiGetRelativeBalanceResponse> convertToRelativeResponse(List<BalanceDifferences> differencesList) {
+        return differencesList.stream()
+                .map(differences -> new ApiGetRelativeBalanceResponse()
+                        .start(differences.getStart())
+                        .end(differences.getEnd())
+                        .differences(convertToResponse(differences.getAmountsByAccountId())))
+                .collect(Collectors.toList());
+    }
+
+    private List<ApiGetAbsoluteBalanceResponse> convertToAbsoluteResponse(List<Balances> balancesList) {
+        return balancesList.stream()
+                .map(balances -> new ApiGetAbsoluteBalanceResponse()
+                        .date(balances.getDate())
+                        .balances(convertToResponse(balances.getAmountsByAccountId())))
+                .collect(Collectors.toList());
+    }
+
+    private List<ApiGetAbsoluteBalanceResponseBalances> convertToResponse(Map<Long, BigDecimal> amounts) {
+        return amounts.entrySet().stream()
+                .map(amount -> new ApiGetAbsoluteBalanceResponseBalances()
+                        .accountId(amount.getKey())
+                        .amount(amount.getValue()))
+                .collect(Collectors.toList());
     }
 }
